--- a/higepos/src/ChangeLog
+++ b/higepos/src/ChangeLog
@@ -1,4 +1,13 @@
+
+        ----------------------課題----------------------
+        * メモリ管理ロジック決定
+        * ファイルシステムFAT12の勉強
+        * プロセス管理実装
+        * キーボード入力
+
+
 2002-09-06  higepon  <>
 
-        * add fault0Handler
+        * メモリ管理 メモリ割り当て失敗時にfault0Handlerが呼ばれるようにした。
 
+        * add fault0Handler
