--- a/higepos/src/ChangeLog
+++ b/higepos/src/ChangeLog
@@ -1,13 +1,19 @@
 
-        ----------------------課題----------------------
-        * メモリ管理ロジック決定
-        * ファイルシステムFAT12の勉強
-        * プロセス管理実装
-        * キーボード入力
 
+2002-09-07  higepon  <>
+
+        * include/X86MemoryManager.h: add higepostypes.h
+          and define H_SIZE_T
+                     H_BYTE
 
 2002-09-06  higepon  <>
 
         * メモリ管理 メモリ割り当て失敗時にfault0Handlerが呼ばれるようにした。
 
         * add fault0Handler
+
+----------------------課題----------------------
+* メモリ管理ロジック決定
+* ファイルシステムFAT12の勉強
+* プロセス管理実装
+* キーボード入力
