modify constructor for free memory list

--- a/higepos/src/ChangeLog
+++ b/higepos/src/ChangeLog
@@ -1,4 +1,6 @@
+2002-09-07  higepon  <>
 
+        * X86MemoryManager.cpp: modify constructor
 
 2002-09-07  higepon  <>
 
@@ -8,12 +10,12 @@
 
 2002-09-06  higepon  <>
 
-        * ƒƒ‚ƒŠŠÇ— ƒƒ‚ƒŠŠ„‚è“–‚Ä¸”s‚Éfault0Handler‚ªŒÄ‚Î‚ê‚é‚æ‚¤‚É‚µ‚½B
+        * ¥á¥â¥ê´ÉÍı ¥á¥â¥ê³ä¤êÅö¤Æ¼ºÇÔ»ş¤Ëfault0Handler¤¬¸Æ¤Ğ¤ì¤ë¤è¤¦¤Ë¤·¤¿¡£
 
         * add fault0Handler
 
-----------------------‰Û‘è----------------------
-* ƒƒ‚ƒŠŠÇ—ƒƒWƒbƒNŒˆ’è
-* ƒtƒ@ƒCƒ‹ƒVƒXƒeƒ€FAT12‚Ì•×‹­
-* ƒvƒƒZƒXŠÇ—À‘•
-* ƒL[ƒ{[ƒh“ü—Í
+----------------------²İÂê----------------------
+* ¥á¥â¥ê´ÉÍı¥í¥¸¥Ã¥¯·èÄê
+* ¥Õ¥¡¥¤¥ë¥·¥¹¥Æ¥àFAT12¤ÎÊÙ¶¯
+* ¥×¥í¥»¥¹´ÉÍı¼ÂÁõ
+* ¥­¡¼¥Ü¡¼¥ÉÆşÎÏ
