--- a/higepos/src/ChangeLog
+++ b/higepos/src/ChangeLog
@@ -1,5 +1,7 @@
 2002-09-08  higepon  <>
 
+        * vga.cpp: create _sys_printf().
+
         * higeOperator.cpp: modify return value of allocateMemory, param value of freeMemory
 
 2002-09-07  higepon  <>
