--- a/higepos/src/ChangeLog
+++ b/higepos/src/ChangeLog
@@ -1,3 +1,4 @@
+
 2002-10-12  higepon  <higepon@users.sourceforge.jp>
 
         KeyBoardManager追加 中身はまだ空です。
@@ -56,3 +57,4 @@
 * Pointのコンストラクタ(引数なし)の挙動が怪しい
 * allocateMemoryがNULLを返した時に割り込み処理を起動
 * 画面スクロールのデバッグ
+* 割り込みコントローラーの設定
