--- a/higepos_v1.1/src/ChangeLog
+++ b/higepos_v1.1/src/ChangeLog
@@ -1,3 +1,10 @@
+2002-10-23  higepon  <higepon@users.sourceforge.jp>
+
+        * higeKernel.cpp:test for HVector記述追加
+        * MakeFile.cygwin:HVector.hの記述追加
+        * HVector追加
+        * higeOperator.cpp: __builtin_vec_delete add
+
 2002-10-22  higepon  <higepon@users.sourceforge.jp>
 
         * KeyBoardManager.cpp:constキーワード等追加
