increase number of sector to read

--- a/higepos_v1.1/src/ChangeLog
+++ b/higepos_v1.1/src/ChangeLog
@@ -1,5 +1,9 @@
+2002-10-23  higepon  <higepon@users.sourceforge.jp>
+
+        * firstboot.asm: number of sector to read を18→32に変更
+
 2002-10-23  syn <syn@users.sourceforge.jp>
-        
+
         * FDCDriver.cpp 追加
         * include/FDCDriver.h 追加
         * higeKernel.cpp: FDCDriver用のテストコード追加(コメントアウト状態)
@@ -7,7 +11,7 @@
         * higeIo.cpp: _sysInitIo: 割り込みマスクを変更し、FDCによる割り込みを許可
         * Makefile*: FDCDriverの記述追加
 
-        
+
 2002-10-23  higepon  <higepon@users.sourceforge.jp>
 
         * higeKernel.cpp:test for HVector記述追加
