--- a/higepos_v1.1/src/ChangeLog
+++ b/higepos_v1.1/src/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-26  higepon  <higepon@users.sourceforge.jp>
+
+        * higeVga.cpp: _sys_printf() %x対応
+
 2002-10-23  higepon  <higepon@users.sourceforge.jp>
 
         * firstboot.asm: number of sector to read を18→32に変更
