update changelog to do list

--- a/higepos_v1.1/src/ChangeLog
+++ b/higepos_v1.1/src/ChangeLog
@@ -104,3 +104,16 @@
 * 画面スクロールのデバッグ
 * 割り込みコントローラーの設定
 * MakeFile統合 include対応
+
+
+* 'disk reading ...' を繰り返す理由が恐らく判明しました。
+
+#825 のソースで、mov ah,02h, int 13h で、cf=1 のときそのまま
+繰り返していることに原因がありそうです。
+
+PC/AT の BIOS では、int 13h で失敗した時は、必ず
+mov ah,00h, int 13h を実行して、disk reset しなければ
+なりません。そうしないと何度でも失敗します。
+
+私も PC-98x1 から移行したとき、ここではまりました。
+これで、この現象はfixされると思います。
