FDCDriver::readSector was implemented (but not complete)

--- a/higepos_v1.1/src/ChangeLog
+++ b/higepos_v1.1/src/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-31  syn <syn@users.sourceforge.jp>
+   
+        * FDCDriver.cpp readSectorの実装
+
 2002-10-26  higepon  <higepon@users.sourceforge.jp>
 
         * higeVga.cpp: _sys_printf() %x対応
