--- a/higepos_v1.1/src/ChangeLog
+++ b/higepos_v1.1/src/ChangeLog
@@ -1,3 +1,8 @@
+2002-11-11  higepon  <higepon@users.sourceforge.jp>
+
+        * firstboot.asm:マルチセクタ読み込み対応 powered by Guripon,syn
+        * higeIdt.h:上記対応に伴いidtrアドレスを0x6800→0x0500へ変更
+
 2002-11-04  higepon  <higepon@users.sourceforge.jp>
 
         * KeyBoardManager.cpp:一部冗長なコードの見直し
