--- a/higepos_v1.1/src/ChangeLog
+++ b/higepos_v1.1/src/ChangeLog
@@ -1,5 +1,9 @@
+2002-11-15  higepon  <higepon@users.sourceforge.jp>
+
+        * higeVga.cpp:文字色・背景色の設定追加
+
 2002-11-14  syn <syn@users.sourceforge.jp>
-        
+
         * higeKernel.cpp, higeTester.cpp: FDCDriverのテストコードを higeTester.cppへ移行
         * FDCDrive.cpp, FDCDrive.h: 2002/11/02に巻き戻した変更を復活
 
