--- a/higepos_v1.1/src/ChangeLog
+++ b/higepos_v1.1/src/ChangeLog
@@ -1,3 +1,7 @@
+2002-11-16  higepon  <higepon@users.sourceforge.jp>
+
+        * higeVga.cpp (scrollUp): 文字色･背景色対応
+
 2002-11-15  higepon  <higepon@users.sourceforge.jp>
 
         * higeVga.cpp:文字色・背景色の設定追加
