--- a/mona_v1.0/src/ChangeLog
+++ b/mona_v1.0/src/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-03  higepon  <higepon@users.sourceforge.jp>
+
+        * test_higepon.cpp: LoadProcess ユーザーモードに対応
+
 2003-11-02  higepon  <higepon@users.sourceforge.jp>
 
         * test_higepon.cpp: LoadProcessが動いた。
