--- a/mona_v1.0/src/ChangeLog
+++ b/mona_v1.0/src/ChangeLog
@@ -1,3 +1,9 @@
+2003-11-12  higepon  <higepon@users.sourceforge.jp>
+
+        * ihandlers.cpp: send/receiveをキーボード割り込みで実験してみた。
+                         メッセージの送信としてはかなり上出来。
+                         ただし現在Messageの格納先が1つなのでそれが問題。
+
 2003-11-11  higepon  <higepon@users.sourceforge.jp>
 
         * test_higepon.cpp: send,receive実験実装.
