--- a/mona_v1.0/src/ChangeLog
+++ b/mona_v1.0/src/ChangeLog
@@ -1,8 +1,10 @@
 2003-11-12  higepon  <higepon@users.sourceforge.jp>
 
+        * test_higepon.cpp: Message格納先をHVector(テンプレート)で実装することにより複数のメッセージにも対応
+
         * ihandlers.cpp: send/receiveをキーボード割り込みで実験してみた。
-                         メッセージの送信としてはかなり上出来。
-                         ただし現在Messageの格納先が1つなのでそれが問題。
+                         メッセージの送信としてはかなり上出来。ただし現在
+                         Messageの格納先が1つなのでそれが問題。
 
 2003-11-11  higepon  <higepon@users.sourceforge.jp>
 
