--- a/mona_v1.0/src/ChangeLog
+++ b/mona_v1.0/src/ChangeLog
@@ -1,5 +1,7 @@
 2003-11-12  higepon  <higepon@users.sourceforge.jp>
 
+        * test_higepon.cpp: ユーザープロセスに対してメッセージを送信できるようになった。
+
         * システムコールの戻り値が正常に取得できるようになった。
 
         * syscalls.cpp システムコールの戻り値が取れていない?
