--- a/mona_v1.0/src/ChangeLog
+++ b/mona_v1.0/src/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-13  higepon  <higepon@users.sourceforge.jp>
+
+        * string.cpp: memcpyが遅かったのでチューニング.インラインアセンブラで書き直した
+
 2003-11-12  higepon  <higepon@users.sourceforge.jp>
 
         * test_higepon.cpp: ユーザープロセスに対してメッセージを送信できるようになった。
