--- a/mona_v1.0/src/ChangeLog
+++ b/mona_v1.0/src/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-30  higepon  <higepon@users.sourceforge.jp>
+
+        * include/Process.h: 新しいプロセス情報構造体を追加
+
 2003-11-13  higepon  <higepon@users.sourceforge.jp>
 
         * string.cpp: memcpyが遅かったのでチューニング.インラインアセンブラで書き直した
