--- a/mona_v1.0/src/ChangeLog
+++ b/mona_v1.0/src/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-09  higepon  <higepon@users.sourceforge.jp>
+
+        * include/Process.h: ProcessManager‚Æƒy[ƒWŠÇ—‚ÌŠÖŒW‚ğ®—
+
 2003-12-07  higepon  <higepon@users.sourceforge.jp>
 
         * Process.cpp: ProcessScheduler‚ğ’Ç‰Á
