--- a/mona_v1.0/src/ChangeLog
+++ b/mona_v1.0/src/ChangeLog
@@ -2,6 +2,7 @@
 
         * Process.cpp: ProcessManager_::createProcess‚ÌœŠi‚ğì¬
                        ProcessManager_::addProcess‚ğì¬
+                       KernelProces,UserProcess‚Ì’Ç‰Á
 
 2003-12-09  higepon  <higepon@users.sourceforge.jp>
 
