--- a/mona_v1.0/src/ChangeLog
+++ b/mona_v1.0/src/ChangeLog
@@ -1,5 +1,7 @@
 2003-12-17  higepon  <higepon@users.sourceforge.jp>
 
+        * Process.cpp: スレッドマネージャ
+
         * include/Process.h: ThreadSchedulerクラスをヘッダに追加(未実装)
 
 2003-12-16  higepon  <higepon@users.sourceforge.jp>
