--- a/mona_v1.0/src/ChangeLog
+++ b/mona_v1.0/src/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-18  higepon  <higepon@users.sourceforge.jp>
+
+        * include/Process.h: Threadクラスを少しずつ肉付け
+
 2003-12-17  higepon  <higepon@users.sourceforge.jp>
 
         * Process.cpp: スレッドマネージャ
