--- a/mona_v1.0/src/ChangeLog
+++ b/mona_v1.0/src/ChangeLog
@@ -1,3 +1,9 @@
+2003-12-20  higepon  <higepon@users.sourceforge.jp>
+
+        * Process.cpp: ThreadManagerを肉付け
+
+        * ビルド時のWarnningをなくした
+
 2003-12-18  higepon  <higepon@users.sourceforge.jp>
 
         * include/Process.h: Threadクラスを少しずつ肉付け
