--- a/mona_v1.0/src/ChangeLog
+++ b/mona_v1.0/src/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-24  higepon  <higepon@users.sourceforge.jp>
+
+        * Process.cpp: スレッドの生成に関わる部分プログラムカウンタなど
+
 2003-12-23  higepon  <higepon@users.sourceforge.jp>
 
         * include/Process.h: getThreadInfo()追加
