--- a/mona_v1.0/src/ChangeLog
+++ b/mona_v1.0/src/ChangeLog
@@ -1,5 +1,10 @@
 2003-12-24  higepon  <higepon@users.sourceforge.jp>
 
+        * KeyBoardManager.cpp: KeyバッファをListにした。
+                               Listの初期化タイミングに問題あり要修正
+
+        * test_higepon.cpp: userKeyStrokeHandlerでは正しくデータが取得できません。
+
         * Process.cpp: スレッドの生成に関わる部分プログラムカウンタなど
 
 2003-12-23  higepon  <higepon@users.sourceforge.jp>
