--- a/mona_v1.0/src/ChangeLog
+++ b/mona_v1.0/src/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-28  higepon  <higepon@users.sourceforge.jp>
+
+        * test_higepon.cpp: ‚Æ‚è‚ ‚¦‚¸USER.ELF‚ª³í‚É“Ç‚İ‚Ü‚ê‚é‚æ‚¤‚É•œ‹A.
+
 2003-12-25  higepon  <higepon@users.sourceforge.jp>
 
         * ihandlers.cpp: •ª‚©‚Á‚½‚±‚Æ umi.initilize‚ªŒÄ‚Î‚ê‚é‚Æƒ_ƒBreceive‚à‰ö‚µ‚¢
