--- a/mona_v1.0/src/ChangeLog
+++ b/mona_v1.0/src/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-30  higepon  <higepon@users.sourceforge.jp>
+
+        * include/collection.h: hash関数の改良 thx!名無しさん@dev-j
+          HashMapはあらかた完成。
+
 2003-12-28  higepon  <higepon@users.sourceforge.jp>
 
         * include/collection.h: BinaryTreeの実装&テスト
