--- a/mona_v1.0/src/ChangeLog
+++ b/mona_v1.0/src/ChangeLog
@@ -1,8 +1,15 @@
+2004-01-03  higepon  <higepon@users.sourceforge.jp>
+
+        * Process.cpp: thread周りの整理。dispatchList, waitListの作成
+
 2004-01-02  higepon  <higepon@users.sourceforge.jp>
+
+        * class ProcessScheduler: 廃止
 
         * Process.cpp: thread周りの本格実装開始
                        ThreadScheculer, ProcessScheculerを廃止xxxxManagerに統合
           これよりしばらく大きな変更が続きます。
+
 
 2003-12-30  higepon  <higepon@users.sourceforge.jp>
 
