--- a/mona_v1.0/src/ChangeLog
+++ b/mona_v1.0/src/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-06  higepon  <higepon@users.sourceforge.jp>
+
+        * kernel.cpp: プロセスのスケジューラがうまくいっていることを確認
+
 2004-01-05  higepon  <higepon@users.sourceforge.jp>
 
         * kernel.cpp: ThreadManager::setup()の呼び出し。dummyのカレントスレッドをセットする。
