kernel does not work

--- a/mona_v1.0/src/ChangeLog
+++ b/mona_v1.0/src/ChangeLog
@@ -1,5 +1,7 @@
 2004-01-06  higepon  <higepon@users.sourceforge.jp>
 
+        * ihandlers.cpp: スレッド切り替え(カーネルモード)実装中。
+
         * 現在カーネルは全く動きません。
 
         * スレッドスケジューラのバグを修正
