--- a/mona_v1.0/src/ChangeLog
+++ b/mona_v1.0/src/ChangeLog
@@ -1,5 +1,7 @@
 2004-01-09  higepon  <higepon@users.sourceforge.jp>
 
+        * KeyBoardManager.cpp: loadProcess(カーネルモード)のスレッド対応終了
+
         * MemoryManager.cpp: メモリ割り当て時のバグを発見･修正
 
 2004-01-08  higepon  <higepon@users.sourceforge.jp>
