--- a/mona_v1.0/src/ChangeLog
+++ b/mona_v1.0/src/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-10  higepon  <higepon@users.sourceforge.jp>
+
+        * PageManager.cpp: ページフォルトハンドラのバグ1つめ修正(エラーコードが正しく取れていなかった)
+
 2004-01-09  higepon  <higepon@users.sourceforge.jp>
 
         * KeyBoardManager.cpp: loadProcess(カーネルモード)のスレッド対応終了
