--- a/mona_v1.0/src/ChangeLog
+++ b/mona_v1.0/src/ChangeLog
@@ -1,3 +1,11 @@
+2004-01-17  higepon  <higepon@users.sourceforge.jp>
+
+        * loadProcessのロジック見直し修正・整形
+
+        * include/FAT12.h: isOpenのバグ修正
+
+        * loadProcess()のdetachし忘れバグ修正 Gakuさん指摘による
+
 2004-01-16  higepon  <higepon@users.sourceforge.jp>
 
         * ihandlers.cpp:フォルト時のダンプ関数を作成
