--- a/mona_v1.0/src/ChangeLog
+++ b/mona_v1.0/src/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-18  higepon  <higepon@users.sourceforge.jp>
+
+        * kernel.cpp: writeFileAppend
+
 2004-01-17  higepon  <higepon@users.sourceforge.jp>
 
         * test_higepon.cpp: writeFileAppend‚Ì“r’†
