--- a/mona_v1.0/src/ChangeLog
+++ b/mona_v1.0/src/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-19  higepon  <higepon@users.sourceforge.jp>
+
+        * kernel.cpp: VMWARE‚ÅVESA
+
+        * configure ‰ü—Ç
+
 2004-01-18  higepon  <higepon@users.sourceforge.jp>
 
         * FAT12.cpp: ƒoƒOC³
