--- a/mona_v1.0/src/ChangeLog
+++ b/mona_v1.0/src/ChangeLog
@@ -1,5 +1,7 @@
 2004-01-22  higepon  <higepon@users.sourceforge.jp>
 
+        * test_higepon.cpp: bitblt(8, 16, 32bpp)に対応
+
         * collection.h: 最適化してみた。
 
         * vbe.h: Screenクラスの作成
