--- a/mona_v1.0/src/ChangeLog
+++ b/mona_v1.0/src/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-29  higepon  <higepon@users.sourceforge.jp>
+
+        * user/hello.cpp: ShellÀ‘•’†
+
 2004-01-28  higepon  <higepon@users.sourceforge.jp>
 
         * Makefile.in (write): ‹LqŠÔˆá‚¢C³
