--- a/mona_v1.0/src/ChangeLog
+++ b/mona_v1.0/src/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-31  higepon  <higepon@users.sourceforge.jp>
+
+        * user/userlib.cpp: Mapping用に新しい関数を作ったがテストしていない。
+
 2004-01-30  higepon  <higepon@users.sourceforge.jp>
 
         * user/hello.cpp: Mapサーバの準備を着々と進めてみた。
@@ -5,6 +9,8 @@
         * user/ShellServer.cpp: Serverを継承するようにした。
 
         * kernel.cpp: 数字キーの入力も対応
+
+        * VesaConsole.cpp: Gaku氏により複数bpp対応
 
 2004-01-29  higepon  <higepon@users.sourceforge.jp>
 
