--- a/mona_v1.0/src/ChangeLog
+++ b/mona_v1.0/src/ChangeLog
@@ -1,5 +1,7 @@
 2004-01-31  higepon  <higepon@users.sourceforge.jp>
 
+        * といっている間にVesaConsole, GraphicalConsoleも直した。
+
         * kernel.cpp: ユーザーモードのprintfを改善 VesaConsole, GraphicalConsoleもそのうち直そう
 
         * user/userlib.cpp: Mapping用に新しい関数を作ったがテストしていない。
