--- a/mona_v1.0/src/ChangeLog
+++ b/mona_v1.0/src/ChangeLog
@@ -1,5 +1,8 @@
 2004-01-31  higepon  <higepon@users.sourceforge.jp>
 
+        * user/ShellServer.cpp: BackSpaceキーに対応
+          HELLO.ELFの文字化けを修正
+
         * といっている間にVesaConsole, GraphicalConsoleも直した。
 
         * kernel.cpp: ユーザーモードのprintfを改善 VesaConsole, GraphicalConsoleもそのうち直そう
