--- a/mona_v1.0/src/ChangeLog
+++ b/mona_v1.0/src/ChangeLog
@@ -1,5 +1,9 @@
 2004-02-03  higepon  <higepon@users.sourceforge.jp>
 
+        * user/include/userlib.h: MemoryMapƒNƒ‰ƒXì¬
+
+        * syscall_map2()Š®¬
+
         * syscalls.cpp : syscall_map2()‚Ì“r’†
 
 2004-02-02  higepon  <higepon@users.sourceforge.jp>
