--- a/mona_v1.0/src/ChangeLog
+++ b/mona_v1.0/src/ChangeLog
@@ -1,5 +1,7 @@
 2004-02-04  higepon  <higepon@users.sourceforge.jp>
 
+        * elf.cpp: プロセスロードのサイズを200KBにする。
+
         * kernel.cpp: user/lib/libuser.aを作成
 
 2004-02-03  higepon  <higepon@users.sourceforge.jp>
