--- a/mona_v1.0/src/ChangeLog
+++ b/mona_v1.0/src/ChangeLog
@@ -1,3 +1,9 @@
+2004-02-05  higepon  <higepon@users.sourceforge.jp>
+
+        * test_higepon.cpp: マウス割り込みが来た(VitualPCのみ)
+
+        * user/userlib.cpp: プロセスの最大ヒープサイズ(自動拡張)を2MBとしました。
+
 2004-02-04  higepon  <higepon@users.sourceforge.jp>
 
         * string.cpp: memcomp, memmove from Gakuさん
