--- a/mona_v1.0/src/ChangeLog
+++ b/mona_v1.0/src/ChangeLog
@@ -1,5 +1,7 @@
 2004-02-09  higepon  <higepon@users.sourceforge.jp>
 
+        * user/userlib.cpp: printfのバグ修正
+
         * syscalls.cpp : プロセスexit();時のバグをやっと修正
                          原因はプロセスが代わったかどうかの isProcessChangedが問題だった。
 
