--- a/mona_v1.0/src/ChangeLog
+++ b/mona_v1.0/src/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-18  higepon  <higepon@users.sourceforge.jp>
+
+        * user/userlib/monalibc.c: ’Ç‰ÁB
+
 2004-02-15  higepon  <higepon@users.sourceforge.jp>
 
         * VesaConsole.cpp: VesaConsole ‰©F‚¢ü‚ªo‚éŒC³(Gaku‚³‚ñ)
